clusters/base/search/searxng/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: searxng
  namespace: search
spec:
  selector:
    app: searxng
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
